--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
         <h1>Hello, I'm Ekaterina Romenkova</h1>
         <br/>
         <p>My goal in life is to always love what I'm doing</p>
-        <p>To know more about me, please <a href="../subWebpages/AboutMe.html">click here</a>!</p>
+        <p>To know more about me, please <a href="../Portfolio_New/subWebpages/AboutMe.html">click here</a>!</p>
     </div>
 </div>
 
